# monkeybread

./: .bumpversion.cfg  .coverage  .cruft.json  .editorconfig  .gitignore  .gitignore.rej  .pre-commit-config.yaml.rej  .readthedocs.yaml  CHANGELOG.md  DOCS_README.md  LICENSE  README.md  README.md.rej  environment.yml  mkdocs.yml  pyproject.toml  pyproject.toml.rej  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  build.yaml.rej  release.yaml  test.yaml  test.yaml.rej  test.yml
docs/: api.md  api.rst  conf.py  conf.py.rej  contributing.md  developer_docs.md  index.md  index.md.rej  index.rst  references.bib  template_usage.md
docs/api/: monkeybread.calc.cell_contact.rst  monkeybread.calc.cell_transcript_proximity.rst  monkeybread.calc.kernel_density.rst  monkeybread.calc.shortest_distances.rst  monkeybread.plot.cell_contact.rst  monkeybread.plot.cell_contact_embedding.rst  monkeybread.plot.cell_contact_heatmap.rst  monkeybread.plot.cell_contact_histplot.rst  monkeybread.plot.cell_transcript_proximity.rst  monkeybread.plot.kernel_density.rst  monkeybread.plot.shortest_distances.rst  monkeybread.plot.volcano_plot.rst  monkeybread.stat.cell_contact.rst  monkeybread.stat.shortest_distances.rst  monkeybread.util.load_merscope.rst  monkeybread.util.randomize_positions.rst  monkeybread.util.subset_cells.rst
docs/notebooks/: example.ipynb  tutorial.ipynb
docs/source/: conf.py  index.rst
monkeybread/: __init__.py
monkeybread/calc/: __init__.py  _cell_contact.py  _cell_transcript_proximity.py  _kernel_density.py
monkeybread/calculate/: _shortest_distances.py
monkeybread/plot/: __init__.py  _cell_contact.py  _cell_transcript_proximity.py  _kernel_density.py  _volcano_plot.py
monkeybread/plotting/: _cell_contact.py  _kernel_density.py
monkeybread/stat/: __init__.py  _cell_contact.py
monkeybread/statistics/: _cell_contact.py  _shortest_distances.py
monkeybread/util/: __init__.py  _load_merscope.py  _randomize_positions.py  _subset_cells.py
monkeybread/utilities/: __init__.py  _randomize_positions.py
octopy/: __init__.py  todo.txt
octopy/calculate/: __init__.py  _cell_contact.py  _kernel_density.py
octopy/plotting/: __init__.py  _shortest_distances.py
octopy/statistics/: __init__.py  _cell_contact.py  _shortest_distances.py
octopy/tools/: __init__.py  _randomize_positions.py  _subset_cells.py
octopy/utilities/: _randomize_positions.py
src/monkeybread/: __init__.py
src/monkeybread/calc/: __init__.py  _cell_contact.py  _cell_density.py  _cell_neighbors.py  _cell_transcript_proximity.py  _kernel_density.py  _ligand_receptor.py  _neighborhood_profile.py  _number_neighbors.py  _shortest_distances.py
src/monkeybread/plot/: __init__.py  _cell_contact.py  _cell_density.py  _cell_neighbors.py  _cell_transcript_proximity.py  _embedding_filter.py  _embedding_other.py  _kernel_density.py  _ligand_receptor.py  _neighborhood_profile.py  _number_neighbors.py  _shortest_distances.py  _volcano_plot.py
src/monkeybread/stat/: __init__.py  _cell_contact.py  _cell_neighbors.py  _ligand_receptor.py  _shortest_distances.py
src/monkeybread/util/: __init__.py  _contact_count.py  _load_merscope.py  _load_xenium.py  _neighbor_count.py  _omnipath.py  _randomize_positions.py  _subset_cells.py
tests/: conftest.py  sample_data.py  test_basic.py  test_contact.py  test_neighborhood.py  test_shortest_distances.py  test_subset.py
tests/calc_stat/: test_cell_neighbors.py  test_ligand_receptor.py  test_neighborhood_profile.py  test_shortest_distances.py  test_subset_cells.py
tests/plot/: conftest.py  test_cell_contact.py  test_embedding_filter.py  test_embedding_other.py  test_kernel_density.py  test_ligand_receptor.py  test_shortest_distances.py  test_volcano_plot.py
