[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cellmate"
version = "0.0.1"
authors = [
  { name="Dillon Scott", email="dillonscott.2024@gmail.com" },
]
description = "Tool for analyzing cell closeness in spatial transcriptomic data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dillydally414/octopy"
"Bug Tracker" = "https://github.com/dillydally414/octopy/issues"
