[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "monkeybread"
version = "0.1.3"
authors = [
    { name="Dillon Scott", email="dillonscott.2024@gmail.com" },
]
description = "Tool for analyzing cell closeness in spatial transcriptomic data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.7.4",
    "numpy>=1.17.0",
    "matplotlib>=3.4",
    "pandas>=1.0",
    "seaborn",
    "tqdm",
    "scikit-learn>=0.22",
]
keywords = [
    "monkeybread",
    "spatial transcriptomics",
    "spatial analysis",
    "single-cell",
    "RNA-seq",
    "MERFISH",
    "MERSCOPE",
    "scanpy",
    "cell interaction",
]

[project.urls]
"Homepage" = "https://github.com/immunitastx/monkeybread"
"Bug Tracker" = "https://github.com/immunitastx/monkeybread/issues"