[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "monkeybread"
version = "0.4.2"
description = "Tool for analyzing cell closeness in spatial transcriptomic data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Immunitas Therapeutics"},
]
maintainers = [
    {name = "Immunitas Therapeutics", email = "dscott@immunitastx.com"},
]
urls.Documentation = "https://monkeybread.readthedocs.io/"
urls.Source = "https://github.com/immunitastx/monkeybread"
urls.Home-page = "https://github.com/immunitastx/monkeybread"
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.7.4",
    "numpy>=1.17.0",
    "matplotlib>=3.4",
    "pandas>=1.0",
    "seaborn",
    "tqdm",
    "scikit-learn>=0.22",
    # for debug logging (referenced from the issue template)
    "session-info"
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit"
]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    # For notebooks
    "ipykernel",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["monkeybread"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
